--- a/settings.ini
+++ b/settings.ini
@@ -29,14 +29,14 @@ title = %(lib_name)s
 
 ### PyPI ###
 audience = Developers
-author = robochicas
-author_email = robochicas.ufba@gmail.com
+author = Ana Carolina
+author_email = carolbalbinos@hotmail.com
 copyright = 2025 onwards, %(author)s
-description = Documentação para onboarding trainee
+description = programa trainee
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
-user = carolbalbs
+user = robochicas
 
 ### Optional ###
 # requirements = fastcore pandas
