--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -2,4 +2,7 @@ website:
   sidebar:
     contents:
       - index.ipynb
-      - 00_core.ipynb
+      - section: Parte 1
+        contents:
+        - 00_core.ipynb
+        - 01_core copy.ipynb
