--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install quarto
         run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
           wget -q $(curl https://latest.fast.ai/pre/quarto-dev/quarto-cli/linux-amd64.deb)
           sudo dpkg -i quarto*.deb
           rm quarto*.deb
