--- a/sidebar.yml
+++ b/sidebar.yml
@@ -20,3 +20,9 @@ website:
         - aulas/Aula 10.qmd
         - aulas/Aula 11.qmd
         - aulas/Aula 12.qmd
+        - aulas/Aula 13.qmd
+        - aulas/Aula 13.qmd       
+        - aulas/Aula 14.qmd
+        - aulas/Aula 15.qmd
+        - aulas/Aula 16.qmd
+        - aulas/Aula 17.qmd
